hphp/hack/test/typecheck/type_structure/type_structure10.php
<?hh // strict

class C {
  const type T = int;
}

function test(): void {
  hh_show(C::T);
}
